--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,9 +21,10 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'landing'%}">Home</a></li>
+                    <li><a href="{% url 'user'%}">Profile</a></li>
                     <li><a href="{% url 'auth'%}">Login</a></li>
                 </ul>
-            </div>v
+            </div>
         </nav>
     </header>
     <main class="container">
