updated nav bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,6 +21,7 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'landing'%}">Home</a></li>
+                    <li><a href="{% url 'events'%}">View Events</a></li>
                     <li><a href="{% url 'user'%}">Profile</a></li>
                     <li><a href="{% url 'auth'%}">Login</a></li>
                 </ul>
