--- a/main_app/templates/add_event.html
+++ b/main_app/templates/add_event.html
@@ -4,12 +4,9 @@
 
 
 <h1>Add Event</h1>
-
-
-    <h2>New post</h2>
-    <form method="POST" class="post-form">
+    <form action="" method="POST" class="post-form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.as_table }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
