--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,7 +21,7 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'landing'%}">Home</a></li>
-                    <li><a href="{% url 'add_event'%}">Add Event</a></li>
+                    <li><a href="{% url 'events_create'%}">Add Event</a></li>
                     <li><a href="{% url 'events'%}">View Events</a></li>
                     <li><a href="{% url 'user'%}">Profile</a></li>
                     {% if user.is_authenticated %}
@@ -39,7 +39,7 @@
     <main class="container" style=" min-height: 94vh;
     overflow: hidden;
     display: block;
-    
+
     padding-bottom: 100px;">
         {% block content %}
         {% endblock %}
