add event error from action in event_form.html resolved, form still not uploading properly

--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -4,14 +4,14 @@
 
 <h1>Add Event</h1>
 
-<form action='add-event/' method='post'>
- 
-{%csrf_token%}
+<form action='' method='post'>
 
-<table>
-    {{form.as_table}}
-</table>
-<input type="submit" value="Add Event"/>
+    {%csrf_token%}
+
+    <table>
+        {{form.as_table}}
+    </table>
+    <input type="submit" value="Add Event" />
 </form>
 
 {% endblock %}
