--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -5,11 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Details</title>
 </head>
 
 <body>
-    <h1>Hello</h1>
+    {% extends 'base.html' %}
+    {% block content %}
+
+    <div class="row">
+        <div class="col s6">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">{{ event.title }}</span>
+                    <p>Date: {{ event.date }}</p>
+                    <p>Time: {{ event.time }}</p>
+                    <p>Location: {{ event.location }}</p>
+                    <p>Description: {{ event.description }}</p>
+                    <p>Attendees: {{ event.attendees }}</p>
+                    <p>InfoLink: {{ event.info }}</p>
+                    <div class="card-action">
+                    </div>
+                    {% endblock %}
 </body>
 
 </html>
