--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -14,4 +14,15 @@
     <input type="submit" value="Add Event" />
 </form>
 
+<script>
+    var dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+      format: 'yyyy-mm-dd',
+      defaultDate: new Date(),
+      setDefaultDate: true,
+      autoClose: true
+    });
+    var selectEl = document.getElementById('id_category');
+    M.FormSelect.init(selectEl);
+  </script>
 {% endblock %}
