styled home & base

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,7 +15,7 @@
 <body style="height: 100%; position: relative;">
     <header class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper" style="background-color: deepskyblue;">
+            <div class="nav-wrapper" style="background-color: #BED7E8;">
                 <ul>
                     <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Convene</a></li>
                 </ul>
