--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,25 +8,49 @@
     <h4>Categories</h4>
   </div>
 </div>
+<br><br><br>
 
-<!-- <div class="continer row">
-  <div class="col s12">Please Select A Category</div>
-  <div class="col s4"> <a href="">Outdoors</a></div>
-  <div class="col s4"> <a href="">Entertainment</a></div>
-  <div class="col s4"> <a href="">Food</a></div>
-  <div class="col s4"> <a href="">Technology</a></div>
-  <div class="col s4"> <a href=""> Education </a></div>
-  <div class="col s4"> <a href=""> Health </a></div>
+<div class="container">
 
-</div> -->
+  <div class="continer row">
+    <div class="center-align col s12">
+      <h3>Select A Category</h3>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style=" background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href="">Outdoors</a></div>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href="">Entertainment</a></div>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href="">Food</a></div>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href="">Technology</a></div>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href=""> Education </a></div>
+    </div>
+    <div class="center-align col s4">
+      <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
+        <a href=""> Health </a></div>
+    </div>
 
-<div class="col-third" style="margin-top: 20%;">
+  </div>
+</div>
+
+<!-- <div class="col-third" style="margin-top: 20%;">
   <div style="z-index: 100; display: grid; justify-content: center; text-align: center;">
     {% for category in arr %}
     <a href="">
       <div 
       style="
-    width: 256px;
+    width: 128px;
     height: 150px;
     margin: 0 auto;
     padding: 20px;
@@ -35,11 +59,11 @@
 "
 >
         {{ category }}
-        </divstyle=" width: 256px; height: 150px; margin: 0 auto; padding: 20px; border-radius: 10px; background-color:
+        </divstyle=" width: 128px; height: 150px; margin: 0 auto; padding: 20px; border-radius: 10px; background-color:
           rgba(255,255,255, 0.8); ">
     </a>
 
   {% endfor %}
 </div>
-</div>
+</div> -->
 {% endblock %}
