--- a/main_app/templates/events/index.html
+++ b/main_app/templates/events/index.html
@@ -1,22 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Events</h1>
+<h2 class="center-align">Events</h2>
 
 {% for event in events %}
-<a href="{% url 'events_detail' event.id %}">
+<div class="row">
+    <div class="col s6">
+        <div class="card horizontal hoverable">
+            <div class="card-image">
+                <img src="https://lorempixel.com/100/190/nature/6"">
+      </div>
+      <div class=" card-stacked">
+                <div class="card-content">
+                    <p>Date: {{ event.date }}</p>
+                    <p>Time: {{ event.time }}</p>
+                    <p>Location: {{ event.location }}</p>
+                    <p class="truncate">Description: {{ event.description }}</p>
+                    <!-- <p>Attendees: {{ event.attendees }}</p>
+            <p>InfoLink: {{ event.info }}</p> -->
+            <!-- <hr> -->
+            <div class="card-action">
+                <a class="btn waves-effect waves-light blue right" href="{% url 'events_detail' event.id %}"><i
+                        class="material-icons center-align">visibility</i></a>
+            </div>        
+        </div>
+                <!-- <div class="card-action">
+            <a onclick="M.toast({html: 'Saved your spot! })" class="btn">RSVP</a>
+
+        </div> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- <a href="{% url 'events_detail' event.id %}">
+    <div>
     <div class="card">
         <div class="card-content">
-            <span class="card-title">{{ event.title }}</span>
+            <span class="card-title">{{ event.title }}</span></a>
             <p>Date: {{ event.date }}</p>
             <p>Time: {{ event.time }}</p>
             <p>Location: {{ event.location }}</p>
-            <p>Description: {{ event.description }}</p>
+            <p class="truncate">Description: {{ event.description }}</p>
             <p>Attendees: {{ event.attendees }}</p>
             <p>InfoLink: {{ event.info }}</p>
         </div>
     </div>
-</a>
-{% endfor %}
+</div> -->
+    {% endfor %}
 
-{% endblock %}
+    {% endblock %}
