--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -14,18 +14,21 @@
 
     <div class="row">
         <div class="col s6">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title">{{ event.title }}</span>
-                    <p>Date: {{ event.date }}</p>
-                    <p>Time: {{ event.time }}</p>
-                    <p>Location: {{ event.location }}</p>
-                    <p>Description: {{ event.description }}</p>
-                    <p>Attendees: {{ event.attendees }}</p>
-                    <p>InfoLink: {{ event.info }}</p>
-                    <div class="card-action">
-                    </div>
-                    {% endblock %}
+            {% for photo in event.photo_set.all %}
+            <img class="responsive-img card-panel" src="{{photo.url}}">
+            {% empty %}
+            <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+            {% endfor %}
+            <h1><span class="card-title">{{ event.title }}</span></h1>
+            <p>Date: {{ event.date }}</p>
+            <p>Time: {{ event.time }}</p>
+            <p>Location: {{ event.location }}</p>
+            <p>Description: {{ event.description }}</p>
+            <p>Attendees: {{ event.attendees }}</p>
+            <p>InfoLink: {{ event.info }}</p>
+            <div class="card-action">
+            </div>
+            {% endblock %}
 </body>
 
 </html>
