--- a/main_app/templates/user/profile.html
+++ b/main_app/templates/user/profile.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>This is a users profile page</h1>
+<h1>This is a users profile page</h1>
+<h3>Username: {{ user.username }}</h3>
 
-{% endblock %} 
+<h3>User Full name: {{ user.get_full_name }}</h3>
+
+<h3>User Group: {{ user.groups.all.0 }}</h3>
+
+<h3>Email: {{ user.email }}</h3>
+<h3>Id: {{ user.id }}</h3>
+
+<h3>Session Started at: {{ user.last_login }}</h3>
+{% endblock %}
