--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Details</title>
-</head>
-
-<body>
-    {% extends 'base.html' %}
+{% extends 'base.html' %}
     {% block content %}
 
+    <!-- <div>
     <div class="row">
         <div class="col s6">
 
@@ -32,9 +23,34 @@
                         <a href="{% url 'events_update' event.id %}">Edit</a>
                         <a href="{% url 'events_delete' event.id %}">Delete</a>
                     </div>
-            </div>
+            </div> -->
+
+<div class="center-align">
+<div class="card large z-depth-2">
+    <div class="card-image waves-effect waves-block waves-light">
+        {% for photo in event.photo_set.all %}
+                <img src="{{photo.url}}">
+            {% empty %}
+               <div >No Photos Uploaded</div>
+            {% endfor %}
+    </div>
+    <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">{{ event.title }}<i class="material-icons right">more_vert</i></span>
+        <p >Date: {{ event.date }}</p>
+            <p>Time: {{ event.time }}</p>
+            <p>Location: {{ event.location }}</p>
+        <p><a href="#">{{ event.info }}</a></p>
+        <div class="card-action">
+            <a href="{% url 'events_update' event.id %}"><button class="btn-floating btn-large waves-effect waves-light blue left hoverable"><i class="material-icons">edit</i></button></a>
+            <a href="{% url 'events_delete' event.id %}"><button class="btn-floating btn-large waves-effect waves-light red right hoverable"><i class="material-icons">delete</i></button></a>
+        </div>
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">{{ event.title }}<i class="material-icons right">close</i></span>
+        <p>{{ event.description }}</p>
+    </div>
+    </div>
+</div>
+            
+
             {% endblock %}
-
-</body>
-
-</html>
