--- a/main_app/templates/events/index.html
+++ b/main_app/templates/events/index.html
@@ -18,12 +18,12 @@
                     <p class="truncate">Description: {{ event.description }}</p>
                     <!-- <p>Attendees: {{ event.attendees }}</p>
             <p>InfoLink: {{ event.info }}</p> -->
-            <!-- <hr> -->
-            <div class="card-action">
-                <a class="btn waves-effect waves-light blue right" href="{% url 'events_detail' event.id %}"><i
-                        class="material-icons center-align">visibility</i></a>
-            </div>        
-        </div>
+                    <!-- <hr> -->
+                    <div class="card-action">
+                        <a class="btn waves-effect waves-green blue right" href="{% url 'events_detail' event.id %}"><i
+                                class="material-icons center-align">visibility</i></a>
+                    </div>
+                </div>
                 <!-- <div class="card-action">
             <a onclick="M.toast({html: 'Saved your spot! })" class="btn">RSVP</a>
 
