--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -2,28 +2,28 @@
 
 {% block content%}
 
+<div class="container row">
+  <form action='' method='post'>
 
-<h3 class="center-align">Add Event</h3>
-
-<div class=" container row">
-<form action='' method='post'>
-
-  {%csrf_token%}
+    {%csrf_token%}
 
 
-{% if object %}
-<h1>Edit <span class="teal-text">{{object.title}}</span></h1>
-{% else %}
-<h1>Add Event</h1>
-{% endif %}
-<form action='' method='post'>
-  {%csrf_token%}
+    {% if object %}
+    <h3>Edit <span class="teal-text">{{object.title}}</span></h3>
+    {% else %}
+    <h3 class="center-align">Add Event</h3>
+    {% endif %}
+    <form action='' method='post'>
+      {%csrf_token%}
 
-  <table>
-    {{form.as_table}}
-  </table>
-  <input type="submit" value="Add Event" />
-</form>
+      <table>
+        {{form.as_table}}
+      </table>
+      <div class=" center align">
+        <button type="submit" value="Add Event" class="waves-effect waves-green btn pulse">Add Event<i
+            class="material-icons right">event</i></button>
+      </div>
+    </form>
 </div>
 
 <script>
