--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -18,27 +18,27 @@
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style=" background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href="">Outdoors</a></div>
+        <a href="{% url 'category_index' 'outdoors'%}">Outdoors</a></div>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href="">Entertainment</a></div>
+        <a href="{% url 'category_index' 'entertainment'%}">Entertainment</a></div>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href="">Food</a></div>
+        <a href="{% url 'category_index' 'food'%}">Food</a></div>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href="">Technology</a></div>
+        <a href="{% url 'category_index' 'technology'%}">Technology</a></div>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href=""> Education </a></div>
+        <a href="{% url 'category_index' 'education'%}"> Education </a></div>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5" style="background-color:rgba(191, 216, 232, 0.9); border-radius: 10px; width: 175px; height: 175px;">
-        <a href=""> Health </a></div>
+        <a href="{% url 'category_index' 'health'%}"> Health </a></div>
     </div>
 
   </div>
