changed text in nav bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,7 +20,7 @@
     <header class="navbar-fixed">
         <ul id="dropdown1" class="dropdown-content">
             <li> <a href="{% url 'signup' %}"> Sign Up</a> </li>
-            <li> <a href="{% url 'login' %}"> login w/ django</a> </li>
+            <li> <a href="{% url 'login' %}"> Login w/ django</a> </li>
             <li class="divider"></li>
             <li><a href="{% url 'social:begin' 'google-oauth2' %}">
                     Login w/ google
@@ -28,7 +28,7 @@
             </li>
         </ul>
         <ul id="dropdown2" class="dropdown-content">
-            <li> <a href="{% url 'logout' %}"> logout w/ django</a> </li>
+            <li> <a href="{% url 'logout' %}"> Logout w/ django</a> </li>
             <li class="divider"></li>
             <li><a href="{% url 'logout' %}">Logout w/ google</a></li>
             </li>
