--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -20,7 +20,7 @@
         {{form.as_table}}
       </table>
       <div class=" center align">
-        <button type="submit" value="Add Event" class="waves-effect waves-green btn pulse">Add Event<i
+        <button type="submit" value="Add Event" class="waves-effect waves-green btn hoverable">Add Event<i
             class="material-icons right">event</i></button>
       </div>
     </form>
