--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -14,7 +14,7 @@
 
   <div class="continer row">
     <div class="center-align col s12">
-      <h3>Select A Category</h3>
+      <h3>Categories</h3>
     </div>
     <div class="center-align col s4">
       <div class="card-panel hoverable z-depth-5"
