fix comments showing on detail view, and passing events to profile screen

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Convene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="/Users/joncarlovargas/Code/Convene-Django/main_app/styles/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,10 +27,7 @@
             </li>
         </ul>
         <ul id="dropdown2" class="dropdown-content">
-            <li> <a href="{% url 'logout' %}"> Logout w/ django</a> </li>
-            <li class="divider"></li>
-            <li><a href="{% url 'logout' %}">Logout w/ google</a></li>
-            </li>
+            <li> <a href="{% url 'logout' %}"> Logout</a> </li>
         </ul>
         <nav>
             <div class="nav-wrapper" style="background-color: #BED7E8; ">
