--- a/main_app/templates/events/index.html
+++ b/main_app/templates/events/index.html
@@ -3,12 +3,10 @@
 
 
 {% if category %}
-    <h1>{{category}} Events</h1>
+<h1>{{category}} Events</h1>
 {% else%}
-    <h1>All Events</h1>
+<h1>All Events</h1>
 {% endif %}
-
-<h2 class="center-align">Events</h2>
 
 {% for event in events %}
 <div class="row">
@@ -23,51 +21,20 @@
             </div>
             <div class=" card-stacked">
                 <div class="card-content">
+                    <p>Title: {{ event.title }}</p>
                     <p>Date: {{ event.date }}</p>
                     <p>Time: {{ event.time }}</p>
                     <p>Location: {{ event.location }}</p>
                     <p class="truncate">Description: {{ event.description }}</p>
-                    <!-- <p>Attendees: {{ event.attendees }}</p>
-            <p>InfoLink: {{ event.info }}</p> -->
-                    <!-- <hr> -->
                     <div class="card-action">
-
-                        <a class="btn waves-effect waves-light blue right" href="{% url 'events_detail' event.id %}"><i
-
                         <a class="btn waves-effect waves-green blue right" href="{% url 'events_detail' event.id %}"><i
-
                                 class="material-icons center-align">visibility</i></a>
                     </div>
                 </div>
-                <!-- <div class="card-action">
-            <a onclick="M.toast({html: 'Saved your spot! })" class="btn">RSVP</a>
-
-        </div> -->
             </div>
         </div>
     </div>
-
-    <!-- <a href="{% url 'events_detail' event.id %}">
-    <div>
-    <div class="card">
-        <div class="card-content">
-
-
-            <span class="card-title">{{ event.title }}</span>
-            {% for photo in event.photo_set.all %}
-            <img src="{{photo.url}}" , style="height: 100px; width:100px;">
-            {% empty %}
-            <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-            {% endfor %}
-            <p>Date: {{ event.date }}</p>
-            <p>Time: {{ event.time }}</p>
-            <p>Location: {{ event.location }}</p>
-            <p class="truncate">Description: {{ event.description }}</p>
-            <p>Attendees: {{ event.attendees }}</p>
-            <p>InfoLink: {{ event.info }}</p>
-        </div>
-    </div>
-</div> -->
     {% endfor %}
+
 
     {% endblock %}
