--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -1,8 +1,7 @@
-
 {% extends 'base.html' %}
-    {% block content %}
+{% block content %}
 
-    <!-- <div>
+<!-- <div>
     <div class="row">
         <div class="col s6">
 
@@ -26,31 +25,61 @@
             </div> -->
 
 <div class="center-align">
-<div class="card large z-depth-2">
-    <div class="card-image waves-effect waves-block waves-light">
-        {% for photo in event.photo_set.all %}
-                <img src="{{photo.url}}">
+    <div class="card large z-depth-2">
+        <div class="card-image waves-effect waves-block waves-light">
+            {% for photo in event.photo_set.all %}
+            <img src="{{photo.url}}">
             {% empty %}
-               <div >No Photos Uploaded</div>
+            <div>No Photos Uploaded</div>
             {% endfor %}
-    </div>
-    <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">{{ event.title }}<i class="material-icons right">more_vert</i></span>
-        <p >Date: {{ event.date }}</p>
+        </div>
+        <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">{{ event.title }}<i
+                    class="material-icons right">more_vert</i></span>
+            <p>Date: {{ event.date }}</p>
             <p>Time: {{ event.time }}</p>
             <p>Location: {{ event.location }}</p>
-        <p><a href="#">{{ event.info }}</a></p>
-        <div class="card-action">
-            <a href="{% url 'events_update' event.id %}"><button class="btn-floating btn-large waves-effect waves-light blue left hoverable"><i class="material-icons">edit</i></button></a>
-            <a href="{% url 'events_delete' event.id %}"><button class="btn-floating btn-large waves-effect waves-light red right hoverable"><i class="material-icons">delete</i></button></a>
+            <p><a href="#">{{ event.info }}</a></p>
+            <div class="card-action">
+                <a href="{% url 'events_update' event.id %}"><button
+                        class="btn-floating btn-large waves-effect waves-light blue left hoverable"><i
+                            class="material-icons">edit</i></button></a>
+                <a href="{% url 'events_delete' event.id %}"><button
+                        class="btn-floating btn-large waves-effect waves-light red right hoverable"><i
+                            class="material-icons">delete</i></button></a>
+            </div>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">{{ event.title }}<i
+                    class="material-icons right">close</i></span>
+            <p>{{ event.description }}</p>
         </div>
     </div>
-    <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">{{ event.title }}<i class="material-icons right">close</i></span>
-        <p>{{ event.description }}</p>
-    </div>
-    </div>
 </div>
-            
+<tbody>
+    {% for comment in event.comments.all %}
+    <div>
+        <tr>
+            <td>{{ comment.text }}</td>
+            <td>{{ comment.user }}</td>
+            <td>{{ comment.created_date }}</td>
+        </tr>
+    </div>
+    {% endfor %}
+</tbody>
 
-            {% endblock %}
+<form action="{% url 'events_rsvp' event.id %}" method="post">
+    {%csrf_token%}
+    <button type="submit" value="RSVP">RSVP</button>
+</form>
+
+
+<form action="{% url 'events_comment' event.id %}" method="post">
+    {%csrf_token%}
+    <textarea type='textarea' name="comment"></textarea>
+    <button type="submit" value="event comment">Comment</button>
+</form>
+
+
+
+{% endblock %}
